made 404 even funnier

--- a/404.html
+++ b/404.html
@@ -29,13 +29,13 @@
         </nav>
     </header>
     <main>
-        <h1>404 / Not Found</h1>
+        <h1>404: Not Found</h1>
         <div>
             <div class="centererWrapper">
-                <section class="titleUnderText">
+              <section class="titleUnderText">
                     <p id="emojiNotFound"></p>
-                    <p class="subTitle">Luckily you didn't break the internet this time!</p>
-                    <p class="subTitle">The page you're looking for cannot be found. If you entered the URL manually,
+                    <p class="subTitle" id="textNotFound"></p>
+                    <p class="subTitle">The page you're looking for cannot be found. <br>If you entered the URL manually,
                         please check
                         the URL and try again, otherwise the page was probably moved or deleted.</p>
                 </section>
