--- a/settings.html
+++ b/settings.html
@@ -166,12 +166,12 @@
                 <div class="messages">
                     <div>
                         <div id="failSave" class="savedMessage failed">
-                            <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
+                            <span class="closebtn" onclick="clearSettingsAlerts()">&#x2715;</span>
                             Failed to save settings. Try again.
                         </div>
 
                         <div id="sucessfullSave" class="savedMessage sucessfull">
-                            <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
+                            <span class="closebtn" onclick="clearSettingsAlerts()">&#x2715;</span>
                             Settings saved successfully!
                         </div>
                     </div>
