--- a/sv/settings.html
+++ b/sv/settings.html
@@ -162,12 +162,12 @@
                 <div class="messages">
                     <div>
                         <div id="failSave" class="savedMessage failed">
-                            <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
+                            <span class="closebtn" onclick="clearSettingsAlerts()">&#x2715;</span>
                             Dina inställningar kunde inte sparas. Försök igen.
                         </div>
 
                         <div id="sucessfullSave" class="savedMessage sucessfull">
-                            <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
+                            <span class="closebtn" onclick="clearSettingsAlerts()">&#x2715;</span>
                             Dina inställningar sparades!
                         </div>
                     </div>
