--- a/projects.html
+++ b/projects.html
@@ -108,13 +108,13 @@
                     </div>
                 </section>
                 <section class="project">
-                    <h2 class="projectName">Chirp <a href="https://chirp.aridan.net">(chirp.aridan.net)</a></h2>
+                    <h2 class="projectName">Chirp (chirp.aridan.net)</a></h2>
                     <p class="projectDesc">A social media project hosted on Cloudflare Pages where users will be able to create Chirps for everyone else on the website to see. Users can then like, rechrip or reply to Chirps.</p>
                     <div>
                         <p class="projectStatus WIP">Work in progress</p>
                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/link.svg"><br> <a rel="noopener" href="https://aridan.net"
-                                target="_blank">aridan.net</a></p>
+                                target="_blank">chirp.aridan.net</a></p>
                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/link.svg"><br> <a rel="noopener"
                                 href="https://github.com/actuallyaridan/aridan.net" target="_blank">GitHub</a></p>
