--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -89,6 +90,23 @@
                     </p>
                 </section>
                 <section class="project">
+                    <h2 class="projectName">Chirp</a></h2>
+                    <p class="projectDesc">A social media project hosted on Cloudflare Pages where users will be able to create Chirps for everyone else on the website to see. Users can then like, rechrip or reply to Chirps.</p>
+                    <div>
+                        <p class="projectStatus WIP">Work in progress</p>
+                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/link.svg"><br> <a rel="noopener" href="https://chirp.aridan.net"
+                                target="_blank">chirp.aridan.net</a></p>
+                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/link.svg"><br> <a rel="noopener"
+                                href="https://github.com/actuallyaridan/arisocial" target="_blank">GitHub</a></p>
+                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/teacher.svg"><br> HTML, CSS, PHP, JavaScript</p>
+                        <p class="projectLegal"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/judge.svg"><br> MIT license</p>
+                    </div>
+                </section>
+                <section class="project">
                     <h2 class="projectName">This website (aridan.net)</h2>
                     <p class="projectDesc">This is a website that has all my social media links, all my
                         experiences and similar listed. I learned a lot during this project, mainly how
@@ -103,23 +121,6 @@
                                 href="https://github.com/actuallyaridan/aridan.net" target="_blank">GitHub</a></p>
                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/teacher.svg"><br> HTML, CSS, JavaScript</p>
-                        <p class="projectLegal"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/judge.svg"><br> MIT license</p>
-                    </div>
-                </section>
-                <section class="project">
-                    <h2 class="projectName">Chirp <a href="https://chirp.aridan.net">(chirp.aridan.net)</a></h2>
-                    <p class="projectDesc">A social media project hosted on Cloudflare Pages where users will be able to create Chirps for everyone else on the website to see. Users can then like, rechrip or reply to Chirps.</p>
-                    <div>
-                        <p class="projectStatus WIP">Work in progress</p>
-                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/link.svg"><br> <a rel="noopener" href="https://aridan.net"
-                                target="_blank">aridan.net</a></p>
-                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/link.svg"><br> <a rel="noopener"
-                                href="https://github.com/actuallyaridan/aridan.net" target="_blank">GitHub</a></p>
-                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/teacher.svg"><br> HTML, CSS, PHP, JavaScript</p>
                         <p class="projectLegal"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/judge.svg"><br> MIT license</p>
                     </div>
