--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,6 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Projects — actuallyaridan</title>
     <meta name="description" content="All of actuallyaridan (Adnan Bukvic)'s projects on one page">
     <meta name="keywords" content="projects, adnan bukvic, actuallyaridan">
@@ -114,8 +113,8 @@
                     <div>
                         <p class="projectStatus WIP">Work in progress</p>
                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/link.svg"><br> <a rel="noopener" href="https://chirp.aridan.net"
-                                target="_blank">chirp.aridan.net</a></p>
+                                src="/src/images/emojis/link.svg"><br> <a rel="noopener" href="https://beta.chirpsocial.net"
+                                target="_blank">beta.chirpsocial.net</a></p>
                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/link.svg"><br> <a rel="noopener"
                                 href="https://github.com/actuallyaridan/arisocial" target="_blank">GitHub</a></p>
