--- a/experiences.html
+++ b/experiences.html
@@ -11,7 +11,8 @@
     <meta name="author" content="Adnan Bukvic">
     <link href="/src/styles/styles.css" rel="stylesheet">
     <script src="/src/scripts/settings.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js"
+        crossorigin="anonymous"></script>
     <script src="/src/scripts/general.js"></script>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
     <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
@@ -92,15 +93,32 @@
                 </section>
                 <section class="centerer">
                     <div class="centererItems">
-                        <a class="socialMedia light"
-                            href="contact">Request CV/resume</a>
+                        <a class="socialMedia light" href="contact">Request CV/resume</a>
                         <a rel="noopener" class="socialMedia linkedin"
                             href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/" target="_blank">LinkedIn</a>
                     </div>
                 </section>
                 <p class="subTitleExp">Work Experience</p>
                 <section class="project">
-                   <h2 class="projectName">Salesperson, technician and lead web developer at IT Care
+                    <h2 class="projectName">IT technican at Tingsryds Municipality</h2>
+                    <p class="projectDesc">I joined my local municipality as an IT technican where I give assistance to
+                        people employed accross the municipality. Along with on-site and remote support, I also assist
+                        with mass demployment and setup of new IT hardware and software for people in various places in
+                        the municipality, like schools, hospitals and similar. I need to obtain a driver's license in
+                        order to get to other towns in the municipality, which is currently one of my priorities.</p>
+                    <div class="projectStuff">
+                        <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/clock.svg"><br> Sept 2024 - Present
+                        </p>
+                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/link.svg"><br> <a rel="noopener" href="https://tingsryd.se"
+                                target="_blank">tingsryd.se</a></p>
+                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/teacher.svg"><br>Installation of computer hardware <br>in commerical and work enviorments <br>Support to end users</p>
+                    </div>
+                </section>
+                <section class="project">
+                    <h2 class="projectName">Salesperson, technician and lead web developer at IT Care
                         Repairstore</h2>
                     <p class="projectDesc">This was my first job. I learned a lot during it and I
                         can
@@ -122,7 +140,7 @@
                 </section>
                 <p class="subTitleExp">Education</p>
                 <section class="project">
-                   <h2 class="projectName">Networking and computer science student at Teknikum </h2>
+                    <h2 class="projectName">Networking and computer science student at Teknikum </h2>
                     <p class="projectDesc">During my time at Teknikum, I got to learn the basics of
                         networking in regard to routing and switching. I also got to learn how to
                         build computers, use virtual machines, manage servers that run on Windows
@@ -149,4 +167,6 @@
         <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
         <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
-</body></html>
+</body>
+
+</html>
