--- a/sv/experiences.html
+++ b/sv/experiences.html
@@ -95,6 +95,26 @@
                 </section>
                 <p class="subTitleExp">Arbetslivserfarenhet</p>
                 <section class="project">
+                    <h2 class="projectName">IT-tekniker på Tingaryds kommun</h2>
+                    <p class="projectDesc">I septmeber 2024 anställdes jag av min lokala kommun som en IT-tekniker där
+                        jag ger
+                        support till personer anställda i kommunen. Tillsamans med
+                        on-site och fjärrsupport, assisterar jag också med installation av ny IT
+                        hårdvara och mjukvara för personer i olika områden inom kommunen, som exempelvis skolor, sjukhus
+                        och liknande. Jag behöver att få ett B-körkort för att komma till andra tätorter i kommunen,
+                        vilket är för närvarande en av mina prioriterter.</p>
+                    <div class="projectStuff">
+                        <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/clock.svg"><br> sep 2024 - nu
+                        </p>
+                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/link.svg"><br> <a rel="noopener" href="https://tingsryd.se"
+                                target="_blank">tingsryd.se</a></p>
+                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/teacher.svg"><br>Installation av ny datorhårdvara <br>i komersiella och arbetsmiljöer <br>Support till slutanvändare</p>
+                    </div>
+                </section>
+                <section class="project">
                     <h2 class="projectName">Säljare, tekniker och webbutvecklare på IT Care Repairstore</h2>
                     <p class="projectDesc">Det här var mitt första jobb. Jag lärde mig mycket under det och
                         jag kan ärligt säga att det lärde mig många livsläxor som jag behövde lära mig.
