--- a/contact.html
+++ b/contact.html
@@ -117,10 +117,10 @@
 
                     <a rel="noopener" class="socialMedia aMusic" href="https://music.apple.com/profile/actuallyaridan"
                         target="_blank">Apple Music</a>
-                    <a rel="noopener" class="socialMedia twitter" href="https://bsky.app/profile/actuallyaridan.bsky.social" target="_blank">X
+                    <a rel="noopener" class="socialMedia twitter" href="https://x.com/actuallyaridan" target="_blank">X
                         (formerly
                         Twitter)</a>
-                        <a rel="noopener" class="socialMedia twitter" href="https://x.com/actuallyaridan" target="_blank">Bluesky</a>
+                        <a rel="noopener" class="socialMedia twitter" href="https://bsky.app/profile/actuallyaridan.bsky.social" target="_blank">Bluesky</a>
                     <a rel="noopener" class="socialMedia threads" href="https://www.threads.net/@actuallyaridan"
                         target="_blank">Threads
                         (an
