--- a/experiences.html
+++ b/experiences.html
@@ -100,10 +100,10 @@
                 </section>
                 <p class="subTitleExp">Work Experience</p>
                 <section class="project">
-                    <h2 class="projectName">IT technican at Tingsryds Municipality</h2>
-                    <p class="projectDesc">I joined my local municipality as an IT technican where I give assistance to
-                        people employed accross the municipality. Along with on-site and remote support, I also assist
-                        with mass demployment and setup of new IT hardware and software for people in various places in
+                    <h2 class="projectName">IT technician at Tingsryds Municipality</h2>
+                    <p class="projectDesc">I joined my local municipality as an IT technician where I give assistance to
+                        people employed across the municipality. Along with on-site and remote support, I also assist
+                        with mass deployment and setup of new IT hardware and software for people in various places in
                         the municipality, like schools, hospitals and similar. I need to obtain a driver's license in
                         order to get to other towns in the municipality, which is currently one of my priorities.</p>
                     <div class="projectStuff">
@@ -114,7 +114,7 @@
                                 src="/src/images/emojis/link.svg"><br> <a rel="noopener" href="https://tingsryd.se"
                                 target="_blank">tingsryd.se</a></p>
                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/teacher.svg"><br>Installation of computer hardware <br>in commerical and work enviorments <br>Support to end users</p>
+                                src="/src/images/emojis/teacher.svg"><br>Installation of computer hardware <br>in commercial and work environments <br>Support to end users</p>
                     </div>
                 </section>
                 <section class="project">
