--- a/sv/experiences.html
+++ b/sv/experiences.html
@@ -96,13 +96,13 @@
                 <p class="subTitleExp">Arbetslivserfarenhet</p>
                 <section class="project">
                     <h2 class="projectName">IT-tekniker på Tingaryds kommun</h2>
-                    <p class="projectDesc">I septmeber 2024 anställdes jag av min lokala kommun som en IT-tekniker där
+                    <p class="projectDesc">I september 2024 anställdes jag av min lokala kommun som en IT-tekniker där
                         jag ger
-                        support till personer anställda i kommunen. Tillsamans med
+                        support till personer anställda i kommunen. Tillsammans med
                         on-site och fjärrsupport, assisterar jag också med installation av ny IT
                         hårdvara och mjukvara för personer i olika områden inom kommunen, som exempelvis skolor, sjukhus
                         och liknande. Jag behöver att få ett B-körkort för att komma till andra tätorter i kommunen,
-                        vilket är för närvarande en av mina prioriterter.</p>
+                        vilket är för närvarande en av mina prioriteter.</p>
                     <div class="projectStuff">
                         <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/clock.svg"><br> sep 2024 - nu
@@ -111,7 +111,7 @@
                                 src="/src/images/emojis/link.svg"><br> <a rel="noopener" href="https://tingsryd.se"
                                 target="_blank">tingsryd.se</a></p>
                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/teacher.svg"><br>Installation av ny datorhårdvara <br>i komersiella och arbetsmiljöer <br>Support till slutanvändare</p>
+                                src="/src/images/emojis/teacher.svg"><br>Installation av ny datorhårdvara <br>i kommersiella och arbetsmiljöer <br>Support till slutanvändare</p>
                     </div>
                 </section>
                 <section class="project">
