fixed UI bug on older browsers

--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
                     <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/speak.svg"> Contact</a>
                 </li>
-                <li>
-                    <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/setttings.svg"> Settings</a>
+                <li class="right-link">
+                    <a class="navButton" href="settings"><img draggable="false" class="emoji"
+                            alt="" src="/src/images/emojis/setttings.svg"> Settings</a>
                 </li>
             </menu>
             <menu class="navWrapperMobile">
                 <li>
                     <a class="navButton activeChoice" href="/">aridan.net</a>
                 </li>
-                <li>
+               <li class="right-link">
                     <button onclick="toggleMenu()" type="button" class="navButton right-link">
                         <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
                         Menu
