--- a/settings.html
+++ b/settings.html
@@ -39,8 +39,8 @@
                     <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/speak.svg"> Contact</a>
                 </li>
-                <li>
-                    <a class="navButton right-link activeChoice" href="settings"><img draggable="false" class="emoji"
+                <li class="right-link">
+                    <a class="navButton activeChoice" href="settings"><img draggable="false" class="emoji"
                             alt="" src="/src/images/emojis/setttings.svg"> Settings</a>
                 </li>
             </menu>
@@ -48,7 +48,7 @@
                 <li>
                     <a class="navButton" href="/">aridan.net</a>
                 </li>
-                <li>
+                    <li class="right-link">
                     <button onclick="toggleMenu()" type="button" class="navButton right-link">
                         <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
                         Menu
