--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description"
-        content="NeoFreeBird - A modified Twitter app with branding reverts, BHTwitter, and other QoL modifications.">
+        content="aridan.net">
     <meta name="keywords"
-        content="NeoFreeBird, Twitter, BHTwitter, modified app, Twitter rebrand, Twitter Blue features">
-    <meta name="author" content="Twitter, actualluaridan, timi2506">
+        content="aridan, actuallyaridan, adnan, bukvic, twitter, discord, lanyard, api, web, developer, front-end, back-end, it, technician, tech, enthusiast">
+    <meta name="author" content="actualluaridan">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aridan.net</title>
@@ -22,11 +22,11 @@
     <script defer="" src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js"
         crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <meta property="og:title" content="NeoFreeBird">
+    <meta property="og:title" content="aridan.net">
     <meta property="og:description"
-        content="A modified Twitter app with branding reverts, BHTwitter, and other QoL modifications.">
+        content="aridan.net">
     <meta property="og:image" content="/images/image.png">
-    <meta property="og:url" content="https://neofreebird.aridan.net">
+    <meta property="og:url" content="https://aridan.net">
     <meta name="twitter:card" content="summary_large_image">
 </head>
 
