fixed mobile menu

--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
         </div>
         <menu class="mobileMenu" id="mobileMenuID">
             <ul>
-                <li><a href="/details">Details</a></li>
-                <li><a href="/docs">Docs</a></li>
+                <li><a href="/details">Experience</a></li>
+                <li><a href="/docs">Projects</a></li>
+                <li><a href="/docs">Contact</a></li>
             </ul>
             <ul>
+                <li><a href="/settings"><i class="fa-solid fa-gear" title="Settings"></i></a></li>
                 <li><a href="https://github.com/actuallyaridan/NeoFreeBird"><i class="fa-brands fa-github"
                             title="GitHub"></i></a></li>
                 <li><a href="https://twitter.com/actuallyaridan"><i class="fa-brands fa-twitter"
