--- a/contact/index.html
+++ b/contact/index.html
@@ -80,75 +80,11 @@
             <div>
                 <h1 class="app-name">Get in touch</h1>
                 <p class="app-description titleColor">Hello there, stranger! Actually, how about we change that? Get in touch with me!</p>
-                <a class="button" href="mailto:adnan@aridan.net"><i class="fa-solid fa-envelope"></i> Get in touch</a>
             </div>
         </div>
         <hr>
-        <div class="feature">
-            <div>
-                <h2 class="feature-title">Support technician</h2>
-                <ul class="specs">
-                    <li><i class="fa-solid fa-building"></i> MiniFinder Sweden AB</li>
-                    <li><i class="fa-solid fa-location-dot"></i> Växjö, Sweden</li>
-                    <li><i class="fa-solid fa-house-laptop"></i> On-site</li>
-                    <li><i class="fa-solid fa-clock"></i> February 2025 - Present</li>
-                </ul>
-                <p class="feature-content">At MiniFinder, I provide support to customers over email, phone or chat. I assist customers when their GPS tracker experiences issues and provide world-class support for a growing IoT company.</p>
-            </div>
-            <div class="screenshot-container">
-                <img class="Screenshot" src="/images/minifinder.jpg">
-                <div class="linkCompany">
-                    <a title="minifinder.com" href="https://minifinder.com"><i class="fa-solid fa-link"></i></a><a title="MiniFinder - LinkedIn" href="https://www.linkedin.com/company/minifinder/"><i class="fa-brands fa-linkedin-in"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="feature">
-            <div>
-                <h2 class="feature-title">IT technician</h2>
-                <ul class="specs">
-                    <li><i class="fa-solid fa-building"></i> Tingsryds municipality</li>
-                    <li><i class="fa-solid fa-location-dot"></i> Tingsryd, Sweden</li>
-                    <li><i class="fa-solid fa-house-laptop"></i> On-site</li>
-                    <li><i class="fa-solid fa-clock"></i> September 2024 - February 2025</li>
-                </ul>
-                <p class="feature-content">As an IT technician at Tingsryds municipality, I provided IT-based support for various end-users across the municipality. I also deployed computers, and rolled in mobile phones and tablets to Microsoft Intune.</p>
-            </div>
-            <div class="screenshot-container">
-                <img class="Screenshot" src="/images/tingsryd.png">
-                <div class="linkCompany">
-                    <a title="tingsryd.se" href="https://tingsryd.se"><i class="fa-solid fa-link"></i></a><a title="Tingsryds municipality - LinkedIn" href="https://www.linkedin.com/company/tingsryds-kommun/"><i class="fa-brands fa-linkedin-in"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="feature">
-            <div>
-                <h2 class="feature-title">Technician and Web developer</h2>
-                <ul class="specs">
-                    <li><i class="fa-solid fa-building"></i> IT Care Repairstore</li>
-                    <li><i class="fa-solid fa-location-dot"></i> Växjö, Sweden</li>
-                    <li><i class="fa-solid fa-house-laptop"></i> On-site</li>
-                    <li><i class="fa-solid fa-clock"></i> November 2022 - October 2023</li>
-                </ul>
-                <p class="feature-content">In my role at IT Care Repairstore, I received, diagnosed, repaired, and returned customers computers, mobile phones and tablets. I was also responsible for keeping the website working and up-to-date.</p>
-            </div>
-            <div class="screenshot-container">
-                <img class="Screenshot" src="/images/itcare.jpg">
-                <div class="linkCompany">
-                    <a title="itcarestore.se" href="https://itcarestore.se"><i class="fa-solid fa-link"></i></a><a title="IT Care Repairstore - LinkedIn" href="https://www.linkedin.com/company/it-care-repairstore/"><i class="fa-brands fa-linkedin-in"></i></a>
-                </div>
-            </div>
-        </div>
-
-        <hr>
-        <div id="app-info">
-            <p class="app-icon"><i class="fa-solid fa-graduation-cap icon-background"></i></i></p>
-            <div>
-                <h1 class="app-name">Education</h1>
-                <p class="app-description titleColor">I've had various jobs at a few companies. I've worked in tech repair, IT support for a municipality, and general support for an IoT company, and I'm only getting started!</p>
-            </div>
-        </div>
-        <hr>
-
+    </main>
+    <footer>
   
         <div class="sosumi">
             <p class="subtitleColor">Any copyrighted material (like application icons, album arts or similar) displayed
