--- a/contact/index.html
+++ b/contact/index.html
@@ -83,13 +83,17 @@
             </div>
         </div>
         <hr>
+        <div class="contact">
+         <a class="button twitter">Twitter</a>
+         <a class="button twitter">Twitter</a>
+         <a class="button twitter">Twitter</a>
+         <a class="button twitter">Twitter</a>
+         <a class="button twitter">Twitter</a>
+        </div>
     </main>
     <footer>
   
         <div class="sosumi">
-            <p class="subtitleColor">Any copyrighted material (like application icons, album arts or similar) displayed
-                on this website is owned by their respective copyright holder.
-                Some images on this website are embedded from other websites.</p>
             <p class="subtitleColor">
                 Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.
             </p>
