--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@
                     Windows 11 and macOS. Yes, it's indeed a hackintosh! It was a bit tideisous to get it running the
                     first time, but it runs well!</p>
                 <ul class="specs">
-                    <li><i class="fa-solid fa-microchip"></i> AMD Ryzen 5 3600</li>
-                    <li><i class="fa-solid fa-gamepad"></i> Radeon RX 6700 XT</li>
-                    <li><i class="fa-solid fa-memory"></i> 16GB 3200MHz DDR4 RAM in dual channel</li>
-                    <li><i class="fa-solid fa-hard-drive"></i> about 2TB of SSD storage</li>
-                    <li><i class="fa-solid fa-wifi"></i> Fenvi T919 WiFi/Bluetooth</li>
-                    <li><i class="fa-brands fa-windows"></i> <i class="fa-brands fa-apple"></i> Windows 11 and macOS Sequoia</li>
+                    <li><i class="fa-solid fa-microchip"></i>AMD Ryzen 5 3600</li>
+                    <li><i class="fa-solid fa-gamepad"></i>Radeon RX 6700 XT</li>
+                    <li><i class="fa-solid fa-memory"></i>16GB 3200MHz DDR4 RAM in dual channel</li>
+                    <li><i class="fa-solid fa-hard-drive"></i>about 2TB of SSD storage</li>
+                    <li><i class="fa-solid fa-wifi"></i>Fenvi T919 WiFi/Bluetooth</li>
+                    <li><i class="fa-brands fa-windows"></i><i class="fa-brands fa-apple"></i>Windows 11 and macOS Sequoia</li>
                 </ul>
             </div>
 
@@ -227,8 +227,8 @@
                 <ul class="specs">
                     <li>a 5.5th Generation iPod Video with a 5000mAh battery and 128GB SD card storage, along with a transparent click wheel and top case</li>
                     <li>a 2nd Generation iPod Mini with a new battery and 64GB of Compact Flash storage</li>
-                    <li><i class="fa-solid fa-mobile-screen-button"></i> a 1st Generation iPod Touch</li>
-                    <li><i class="fa-solid fa-mobile-screen-button"></i> a 3rd Generation iPod Touch</li>
+                    <li><i class="fa-solid fa-mobile-screen-button"></i>a 1st Generation iPod Touch</li>
+                    <li><i class="fa-solid fa-mobile-screen-button"></i>a 3rd Generation iPod Touch</li>
                 </ul>
             </div>
 
@@ -277,7 +277,7 @@
 
         </div>
     </footer>
-    <dialog>
+    <dialog style="display: none;" id="settingsDialog">
         <div class="modal">
             <div class="modal-content">
                 <h2>Settings</h2>
