--- a/experience/index.html
+++ b/experience/index.html
@@ -80,7 +80,7 @@
             <div>
                 <h1 class="app-name">Career</h1>
                 <p class="app-description titleColor">I've had various jobs at a few companies. I've worked in tech repair, IT support for a municipality, and general support for an IoT company, and I'm only getting started!</p>
-                <a class="button" href="mailto:adnan@aridan.net"><i class="fa-solid fa-envelope"></i> Get in touch</a>
+                <a class="button" href="mailto:adnan@aridan.net"><i class="fa-solid fa-envelope"></i>Get in touch</a>
             </div>
         </div>
         <hr>
@@ -88,10 +88,10 @@
             <div>
                 <h2 class="feature-title">Support technician</h2>
                 <ul class="specs">
-                    <li><i class="fa-solid fa-building"></i> MiniFinder Sweden AB</li>
-                    <li><i class="fa-solid fa-location-dot"></i> Växjö, Sweden</li>
-                    <li><i class="fa-solid fa-house-laptop"></i> On-site</li>
-                    <li><i class="fa-solid fa-clock"></i> February 2025 - Present</li>
+                    <li><i class="fa-solid fa-building"></i>MiniFinder Sweden AB</li>
+                    <li><i class="fa-solid fa-location-dot"></i>Växjö, Sweden</li>
+                    <li><i class="fa-solid fa-house-laptop"></i>On-site</li>
+                    <li><i class="fa-solid fa-clock"></i>February 2025 - Present</li>
                 </ul>
                 <p class="feature-content">At MiniFinder, I provide support to customers over email, phone or chat. I assist customers when their GPS tracker experiences issues and provide world-class support for a growing IoT company.</p>
             </div>
@@ -106,10 +106,10 @@
             <div>
                 <h2 class="feature-title">IT technician</h2>
                 <ul class="specs">
-                    <li><i class="fa-solid fa-building"></i> Tingsryds municipality</li>
-                    <li><i class="fa-solid fa-location-dot"></i> Tingsryd, Sweden</li>
-                    <li><i class="fa-solid fa-house-laptop"></i> On-site</li>
-                    <li><i class="fa-solid fa-clock"></i> September 2024 - February 2025</li>
+                    <li><i class="fa-solid fa-building"></i>Tingsryds municipality</li>
+                    <li><i class="fa-solid fa-location-dot"></i>Tingsryd, Sweden</li>
+                    <li><i class="fa-solid fa-house-laptop"></i>On-site</li>
+                    <li><i class="fa-solid fa-clock"></i>September 2024 - February 2025</li>
                 </ul>
                 <p class="feature-content">As an IT technician at Tingsryds municipality, I provided IT-based support for various end-users across the municipality. I also deployed computers, and rolled in mobile phones and tablets to Microsoft Intune.</p>
             </div>
@@ -124,10 +124,10 @@
             <div>
                 <h2 class="feature-title">Technician and Web developer</h2>
                 <ul class="specs">
-                    <li><i class="fa-solid fa-building"></i> IT Care Repairstore</li>
-                    <li><i class="fa-solid fa-location-dot"></i> Växjö, Sweden</li>
-                    <li><i class="fa-solid fa-house-laptop"></i> On-site</li>
-                    <li><i class="fa-solid fa-clock"></i> November 2022 - October 2023</li>
+                    <li><i class="fa-solid fa-building"></i>IT Care Repairstore</li>
+                    <li><i class="fa-solid fa-location-dot"></i>Växjö, Sweden</li>
+                    <li><i class="fa-solid fa-house-laptop"></i>On-site</li>
+                    <li><i class="fa-solid fa-clock"></i>November 2022 - October 2023</li>
                 </ul>
                 <p class="feature-content">In my role at IT Care Repairstore, I received, diagnosed, repaired, and returned customers computers, mobile phones and tablets. I was also responsible for keeping the website working and up-to-date.</p>
             </div>
@@ -148,28 +148,31 @@
             </div>
         </div>
         <hr>
-
-       
-    <footer>
-        <div class="poweredBySection">
-            <div class="poweredBy">
-                <p class="subtitleColor">discord API provided by</p>
-                <img src="src/images/icons/lanyardLong.png" alt="Lanyard" title="Lanyard" class="lanyard-logo">
+        <div class="feature">
+            <div>
+                <h2 class="feature-title">Computer and Networking Technology</h2>
+                <ul class="specs">
+                    <li><i class="fa-solid fa-building"></i>Teknikum</li>
+                    <li><i class="fa-solid fa-location-dot"></i>Tingsryd, Sweden</li>
+                    <li><i class="fa-solid fa-clock"></i>August 2020 - June 2023</li>
+                </ul>
+                <p class="feature-content">At Teknikum, I expanded my knowledge in regards to Windows clients along with learning how to properly use Windows Server, set up Active Directory and similar. I also learned how to setup Cisco network equipment like routers and switches. I also added a web development course to my curriculum, which helped me create my Twitter clone called Chirp, and this very website.</p>
             </div>
-            <div class="poweredBy">
-                <p class="subtitleColor">hosted using</p>
-                <img src="src/images/icons/cloudflare.png" alt="Cloudflare" title="Cloudflare" class="lanyard-logo">
+            <div class="screenshot-container">
+                <img class="Screenshot" src="/images/vaxjo.png">
+                <div class="linkCompany">
+                    <a title="teknikum.se" href="https://teknikum.se"><i class="fa-solid fa-link"></i>
+                </div>
             </div>
         </div>
+        <hr>
+    </main>
+       
+    <footer>
         <div class="sosumi">
-            <p class="subtitleColor">Any copyrighted material (like application icons, album arts or similar) displayed
-                on this website is owned by their respective copyright holder.
-                Some images on this website are embedded from other websites.</p>
             <p class="subtitleColor">
                 Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.
             </p>
-
-
         </div>
     </footer>
     <dialog>
