--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="/src/styles.css">
     <link rel="stylesheet" href="/src/lanyard.css">
     <script src="/src/general.js" async></script>
-    <script src="/src/lanyard.js" async></script>
+    <script src="/src/lanyard.js" defer></script>
     <script defer="" src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js"
         crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
